[metadata]
name = hyrrokkin
version = attr: hyrrokkin.VERSION
author = Visual Topology
author_email = dev@visualtopology.com
description = An asynchronous dataflow execution engine for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/visualtopology/hyrrokkin
project_urls =
    Bug Tracker = https://github.com/visualtopology/hyrrokkin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =

[options.extras_require]
# install support for tools to convert topologies to/from YAML format
YAML =
    pyyaml

[options.entry_points]
console_scripts =
    validate_package_json = hyrrokkin.tools.package_validation.validate_package_json:main

[options.packages.find]
where = src

[tool.setuptools.package-data]
"*" = ["*.json"]
